# fuzzer_compare

./: Cargo.toml
config/squirrel/: config_mariadb.yml  config_mysql.yml  config_postgresql.yml
src/: constants.rs  lib.rs  utils.rs
src/builder/: boost.rs  mariadb.rs  mod.rs  mysql.rs  pgsql.rs  squirrel.rs
src/monitor/: afl_status.rs  llvm_cov.rs  manager.rs  mod.rs
src/runner/: mod.rs  squirrel.rs
