[package]
name = "fuzzer_compare"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
clokwerk = "0.4.0"
csv = "1.2.2"
once_cell = "1.18.0"


[profile.release]
panic = 'abort'
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
